--- a/Homeworks/tarea1/pom.xml
+++ b/Homeworks/tarea1/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>es.ies.puerto</groupId>
     <artifactId>tarea1</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0.160924</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
