updating with json

--- a/Homeworks/ejercicio-file/pom.xml
+++ b/Homeworks/ejercicio-file/pom.xml
@@ -65,6 +65,12 @@
             <version>${gson.version}</version>
         </dependency>
 
+        <!-- Jackson Core para procesamiento JSON -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
