updating app-registro-fx

--- a/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
@@ -1,2 +1,18 @@
 textUsuario=User
 textContrasenia=Password
+textEmail=Email
+textFieldUsuario=Enter Username
+textFieldPassword=Enter Password
+textFieldEmail=Enter Email
+textFieldNombre=Enter Name
+textFieldEmailRepit=Repeat Email
+textFieldPasswordRepit=Repeat Password
+openAceptarButton=Accept
+openRegistrarButton=Register
+buttonRecuperarContrasenia=Recover Password
+buttonVolverAtras=Go Back
+textRegistroTitulo=Sign Up Now!
+profile.title=Profile Screen
+registro.title=Register Screen
+password.title=Recover Password Screen
+login.title=Main Screen
