--- a/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
@@ -1,2 +1,18 @@
 textUsuario=Usuario
 textContrasenia=Contraseña
+textEmail=Correo Electrónico
+textFieldUsuario=Introducir Usuario
+textFieldPassword=Introducir Contraseña
+textFieldEmail=Introducir Correo Electrónico
+textFieldNombre=Introducir Nombre
+textFieldEmailRepit=Repetir Correo Electrónico
+textFieldPasswordRepit=Repetir contraseña
+openAceptarButton=Aceptar
+openRegistrarButton=Registrar
+buttonRecuperarContrasenia=Recuperar Contraseña
+buttonVolverAtras=Volver Atrás
+textRegistroTitulo=¡Regístrate Ahora!
+profile.title=Pantalla de Perfil
+registro.title=Pantalla Registro
+password.title=Pantalla Recuperar Contraseña
+login.title=Pantalla Principal
