--- a/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
@@ -1,2 +1,18 @@
-textUsuario=
-textContrasenia=
+textUsuario=Utilisateur  
+textContrasenia=Mot de passe  
+textEmail=Courrier électronique  
+textFieldUsuario=Entrer l'utilisateur  
+textFieldPassword=Entrer le mot de passe  
+textFieldEmail=Entrer le courrier électronique  
+textFieldNombre=Entrer le nom  
+textFieldEmailRepit=Répéter le courrier électronique  
+textFieldPasswordRepit=Répéter le mot de passe  
+openAceptarButton=Accepter  
+openRegistrarButton=S'inscrire  
+buttonRecuperarContrasenia=Mot de passe oublié?
+buttonVolverAtras=Retour  
+textRegistroTitulo=Inscrivez-vous maintenant !  
+profile.title=Écran de Profil
+registro.title=Écran d'Enregistrement
+password.title=Écran de Récupération de Mot de Passe
+login.title=Écran Principal
