app-registro-fx finished

--- a/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
@@ -1,18 +1,32 @@
-textUsuario=User
-textContrasenia=Password
-textEmail=Email
-textFieldUsuario=Enter Username
-textFieldPassword=Enter Password
-textFieldEmail=Enter Email
-textFieldNombre=Enter Name
-textFieldEmailRepit=Repeat Email
-textFieldPasswordRepit=Repeat Password
-openAceptarButton=Accept
-openRegistrarButton=Register
-buttonRecuperarContrasenia=Recover Password
-buttonVolverAtras=Go Back
-textRegistroTitulo=Sign Up Now!
-profile.title=Profile Screen
-registro.title=Register Screen
-password.title=Recover Password Screen
-login.title=Main Screen
+textUsuario=User  
+textContrasenia=Password  
+textEmail=Email  
+textFieldUsuario=Enter Username  
+textFieldPassword=Enter Password  
+textFieldEmail=Enter Email  
+textFieldNombre=Enter Name  
+textFieldEmailRepit=Repeat Email  
+textFieldPasswordRepit=Repeat Password  
+openAceptarButton=Accept  
+openRegistrarButton=Register  
+buttonRecuperarContrasenia=Recover Password  
+buttonVolverAtras=Back  
+textRegistroTitulo=Sign Up Now!  
+profileTitle=Profile Screen  
+registroTitle=Registration Screen  
+passwordTitle=Recover Password Screen  
+loginTitle=Main Screen  
+errorCredencialesVacios=Credentials cannot be empty!  
+errorUsuarioNoEncontrado=User not found  
+errorContraseniaIncorrecta=Incorrect password  
+errorEmailVacioNulo=Email cannot be empty!  
+errorEnviarEmail=Failed to send email!  
+emailEnvioCorrecto=Email sent successfully  
+errorUsuarioVacio=Username cannot be empty!  
+errorPasswordVacio=Password cannot be empty!  
+errorNombreVacio=Name cannot be empty!  
+errorEmailVacio=Email cannot be empty!  
+errorPasswordLongitud=Password must be at least 6 characters!  
+errorEmailFormato=Invalid email format!  
+errorUsuarioExiste=User already exists!  
+errorEmailOPasswordNoCoincide=Email or password do not match!
