--- a/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
@@ -12,7 +12,21 @@ openRegistrarButton=Registrar
 buttonRecuperarContrasenia=Recuperar Contraseña
 buttonVolverAtras=Volver Atrás
 textRegistroTitulo=¡Regístrate Ahora!
-profile.title=Pantalla de Perfil
-registro.title=Pantalla Registro
-password.title=Pantalla Recuperar Contraseña
-login.title=Pantalla Principal
+profileTitle=Pantalla de Perfil
+registroTitle=Pantalla Registro
+passwordTitle=Pantalla Recuperar Contraseña
+loginTitle=Pantalla Principal
+errorCredencialesVacios=¡Credenciales nulos o vacíos!
+errorUsuarioNoEncontrado=Usuario no encontrado
+errorContraseniaIncorrecta=Contraseña incorrecta
+errorEmailVacioNulo=¡El email no puede ser nulo o vacio!
+errorEnviarEmail=¡No ha sido posible enviar el email!
+emailEnvioCorrecto=El email se ha enviado correctamente
+errorUsuarioVacio=¡El usuario no puede ser nulo o vacío!
+errorPasswordVacio=¡La contraseña no puede ser nula o vacía!
+errorNombreVacio=¡El nombre no puede ser nulo o vacío!
+errorEmailVacio=¡El email no puede ser nulo o vacío!
+errorPasswordLongitud=¡La contraseña debe tener al menos 6 caracteres!
+errorEmailFormato=¡El formato del correo no es válido!
+errorUsuarioExiste=¡El usuario ya existe!
+errorEmailOPasswordNoCoincide=¡El correo electrónico o la contraseña no coinciden!
