--- a/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
@@ -1,18 +1,32 @@
 textUsuario=Utilisateur  
 textContrasenia=Mot de passe  
-textEmail=Courrier électronique  
-textFieldUsuario=Entrer l'utilisateur  
-textFieldPassword=Entrer le mot de passe  
-textFieldEmail=Entrer le courrier électronique  
-textFieldNombre=Entrer le nom  
-textFieldEmailRepit=Répéter le courrier électronique  
+textEmail=Email  
+textFieldUsuario=Entrez le nom d'utilisateur  
+textFieldPassword=Entrez le mot de passe  
+textFieldEmail=Entrez l'email  
+textFieldNombre=Entrez le nom  
+textFieldEmailRepit=Répéter l'email  
 textFieldPasswordRepit=Répéter le mot de passe  
 openAceptarButton=Accepter  
 openRegistrarButton=S'inscrire  
-buttonRecuperarContrasenia=Mot de passe oublié?
+buttonRecuperarContrasenia=Récupérer le mot de passe  
 buttonVolverAtras=Retour  
 textRegistroTitulo=Inscrivez-vous maintenant !  
-profile.title=Écran de Profil
-registro.title=Écran d'Enregistrement
-password.title=Écran de Récupération de Mot de Passe
-login.title=Écran Principal
+profileTitle=Écran de Profil  
+registroTitle=Écran d'Enregistrement  
+passwordTitle=Écran de Récupération de Mot de Passe  
+loginTitle=Écran Principal  
+errorCredencialesVacios=Les identifiants ne peuvent pas être vides !  
+errorUsuarioNoEncontrado=Utilisateur non trouvé  
+errorContraseniaIncorrecta=Mot de passe incorrect  
+errorEmailVacioNulo=L'email ne peut pas être vide !  
+errorEnviarEmail=Échec de l'envoi de l'email !  
+emailEnvioCorrecto=Email envoyé avec succès  
+errorUsuarioVacio=Le nom d'utilisateur ne peut pas être vide !  
+errorPasswordVacio=Le mot de passe ne peut pas être vide !  
+errorNombreVacio=Le nom ne peut pas être vide !  
+errorEmailVacio=L'email ne peut pas être vide !  
+errorPasswordLongitud=Le mot de passe doit contenir au moins 6 caractères !  
+errorEmailFormato=Format d'email invalide !  
+errorUsuarioExiste=L'utilisateur existe déjà !  
+errorEmailOPasswordNoCoincide=L'email ou le mot de passe ne correspondent pas !
