--- a/homeworks/app-registro-fx/pom.xml
+++ b/homeworks/app-registro-fx/pom.xml
@@ -26,6 +26,7 @@
         <checkstyle.version>8.39</checkstyle.version>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
         <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
+        <sqlite-jdbc.version>3.45.2.0</sqlite-jdbc.version>
     </properties>
 
     <dependencies>
@@ -88,6 +89,12 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>${mockito-version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${sqlite-jdbc.version}</version>
         </dependency>
     </dependencies>
 
