updating app-registro-fx

--- a/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
@@ -1,7 +1,9 @@
 textUsuario=Usuario
+textUsuarioEmail=Usuario o Correo Electrónico
 textContrasenia=Contraseña
 textEmail=Correo Electrónico
 textFieldUsuario=Introducir Usuario
+textFieldUsuarioEmail=Introduce Usuario o Correo 
 textFieldPassword=Introducir Contraseña
 textFieldEmail=Introducir Correo Electrónico
 textFieldNombre=Introducir Nombre
