--- a/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
@@ -1,32 +1,34 @@
-textUsuario=Utilisateur  
-textContrasenia=Mot de passe  
-textEmail=Email  
-textFieldUsuario=Entrez le nom d'utilisateur  
-textFieldPassword=Entrez le mot de passe  
-textFieldEmail=Entrez l'email  
-textFieldNombre=Entrez le nom  
-textFieldEmailRepit=Répéter l'email  
-textFieldPasswordRepit=Répéter le mot de passe  
-openAceptarButton=Accepter  
-openRegistrarButton=S'inscrire  
-buttonRecuperarContrasenia=Récupérer le mot de passe  
-buttonVolverAtras=Retour  
-textRegistroTitulo=Inscrivez-vous maintenant !  
-profileTitle=Écran de Profil  
-registroTitle=Écran d'Enregistrement  
-passwordTitle=Écran de Récupération de Mot de Passe  
-loginTitle=Écran Principal  
-errorCredencialesVacios=Les identifiants ne peuvent pas être vides !  
-errorUsuarioNoEncontrado=Utilisateur non trouvé  
-errorContraseniaIncorrecta=Mot de passe incorrect  
-errorEmailVacioNulo=L'email ne peut pas être vide !  
-errorEnviarEmail=Échec de l'envoi de l'email !  
-emailEnvioCorrecto=Email envoyé avec succès  
-errorUsuarioVacio=Le nom d'utilisateur ne peut pas être vide !  
-errorPasswordVacio=Le mot de passe ne peut pas être vide !  
-errorNombreVacio=Le nom ne peut pas être vide !  
-errorEmailVacio=L'email ne peut pas être vide !  
-errorPasswordLongitud=Le mot de passe doit contenir au moins 6 caractères !  
-errorEmailFormato=Format d'email invalide !  
-errorUsuarioExiste=L'utilisateur existe déjà !  
-errorEmailOPasswordNoCoincide=L'email ou le mot de passe ne correspondent pas !
+textUsuario=Utilisateur
+textUsuarioEmail=Utilisateur ou Adresse e-mail
+textContrasenia=Mot de passe
+textEmail=Adresse e-mail
+textFieldUsuario=Entrer le nom d'utilisateur
+textFieldUsuarioEmail=Entrer le nom d'utilisateur ou l'adresse e-mail
+textFieldPassword=Entrer le mot de passe
+textFieldEmail=Entrer l'adresse e-mail
+textFieldNombre=Entrer le nom
+textFieldEmailRepit=Répéter l'adresse e-mail
+textFieldPasswordRepit=Répéter le mot de passe
+openAceptarButton=Accepter
+openRegistrarButton=S'inscrire
+buttonRecuperarContrasenia=Récupérer le mot de passe
+buttonVolverAtras=Retour
+textRegistroTitulo=Inscrivez-vous maintenant !
+profileTitle=Écran du profil
+registroTitle=Écran d'inscription
+passwordTitle=Écran de récupération du mot de passe
+loginTitle=Écran principal
+errorCredencialesVacios=Identifiants vides ou nuls !
+errorUsuarioNoEncontrado=Utilisateur non trouvé
+errorContraseniaIncorrecta=Mot de passe incorrect
+errorEmailVacioNulo=L'adresse e-mail ne peut pas être vide ou nulle !
+errorEnviarEmail=Échec de l'envoi de l'e-mail !
+emailEnvioCorrecto=Le courriel a été envoyé avec succès
+errorUsuarioVacio=Le nom d'utilisateur ne peut pas être vide ou nul !
+errorPasswordVacio=Le mot de passe ne peut pas être vide ou nul !
+errorNombreVacio=Le nom ne peut pas être vide ou nul !
+errorEmailVacio=L'adresse e-mail ne peut pas être vide ou nulle !
+errorPasswordLongitud=Le mot de passe doit contenir au moins 6 caractères !
+errorEmailFormato=Format d'adresse e-mail invalide !
+errorUsuarioExiste=L'utilisateur existe déjà !
+errorEmailOPasswordNoCoincide=L'adresse e-mail ou le mot de passe ne correspondent pas !
