--- a/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
@@ -1,34 +1,41 @@
-textUsuario=Utilisateur
-textUsuarioEmail=Utilisateur ou Adresse e-mail
-textContrasenia=Mot de passe
-textEmail=Adresse e-mail
-textFieldUsuario=Entrer le nom d'utilisateur
-textFieldUsuarioEmail=Entrer le nom d'utilisateur ou l'adresse e-mail
-textFieldPassword=Entrer le mot de passe
-textFieldEmail=Entrer l'adresse e-mail
-textFieldNombre=Entrer le nom
-textFieldEmailRepit=Répéter l'adresse e-mail
-textFieldPasswordRepit=Répéter le mot de passe
-openAceptarButton=Accepter
-openRegistrarButton=S'inscrire
-buttonRecuperarContrasenia=Récupérer le mot de passe
-buttonVolverAtras=Retour
-textRegistroTitulo=Inscrivez-vous maintenant !
-profileTitle=Écran du profil
-registroTitle=Écran d'inscription
-passwordTitle=Écran de récupération du mot de passe
-loginTitle=Écran principal
-errorCredencialesVacios=Identifiants vides ou nuls !
-errorUsuarioNoEncontrado=Utilisateur non trouvé
-errorContraseniaIncorrecta=Mot de passe incorrect
-errorEmailVacioNulo=L'adresse e-mail ne peut pas être vide ou nulle !
-errorEnviarEmail=Échec de l'envoi de l'e-mail !
-emailEnvioCorrecto=Le courriel a été envoyé avec succès
-errorUsuarioVacio=Le nom d'utilisateur ne peut pas être vide ou nul !
-errorPasswordVacio=Le mot de passe ne peut pas être vide ou nul !
-errorNombreVacio=Le nom ne peut pas être vide ou nul !
-errorEmailVacio=L'adresse e-mail ne peut pas être vide ou nulle !
-errorPasswordLongitud=Le mot de passe doit contenir au moins 6 caractères !
-errorEmailFormato=Format d'adresse e-mail invalide !
-errorUsuarioExiste=L'utilisateur existe déjà !
-errorEmailOPasswordNoCoincide=L'adresse e-mail ou le mot de passe ne correspondent pas !
+textUsuario=Utilisateur  
+textUsuarioEmail=Utilisateur ou Courrier Électronique  
+textContrasenia=Mot de passe  
+textEmail=Courrier Électronique  
+textFieldUsuario=Entrer Utilisateur  
+textFieldUsuarioEmail=Entrer Utilisateur ou Courrier  
+textFieldPassword=Entrer Mot de passe  
+textFieldEmail=Entrer Courrier Électronique  
+textFieldNombre=Entrer Nom  
+textFieldEmailRepit=Répéter Courrier Électronique  
+textFieldPasswordRepit=Répéter Mot de passe  
+textListaUsuario=Liste des Utilisateurs  
+openAceptarButton=Accepter  
+openRegistrarButton=Inscrire  
+openListarUsuariosButton=Liste des Utilisateurs  
+buttonRecuperarContrasenia=Récupérer Mot de passe  
+buttonVolverAtras=Retour  
+textRegistroTitulo=Inscrivez-vous Maintenant !  
+profileTitle=Écran de Profil  
+registroTitle=Écran d'Inscription  
+passwordTitle=Écran de Récupération de Mot de passe  
+loginTitle=Écran Principal  
+usuarioTitle=Écran Liste des Utilisateurs  
+errorCredencialesVacios=Identifiants nuls ou vides !  
+errorUsuarioNoEncontrado=Utilisateur non trouvé  
+errorContraseniaIncorrecta=Mot de passe incorrect  
+errorEmailVacioNulo=Le courriel ne peut pas être nul ou vide !  
+errorEnviarEmail=Impossible d'envoyer le courriel !  
+emailEnvioCorrecto=Le courriel a été envoyé avec succès  
+errorUsuarioVacio=L'utilisateur ne peut pas être nul ou vide !  
+errorPasswordVacio=Le mot de passe ne peut pas être nul ou vide !  
+errorNombreVacio=Le nom ne peut pas être nul ou vide !  
+errorEmailVacio=Le courriel ne peut pas être nul ou vide !  
+errorPasswordLongitud=Le mot de passe doit contenir au moins 6 caractères !  
+errorEmailFormato=Le format du courriel n'est pas valide !  
+errorUsuarioExiste=L'utilisateur existe déjà !  
+errorEmailOPasswordNoCoincide=Le courriel ou le mot de passe ne correspondent pas !  
+idRow=ID
+usuarioRow=Utilisateur
+emailRow=Courriel  
+nombreRow=Nom
