--- a/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
@@ -9,8 +9,10 @@ textFieldEmail=Introducir Correo Electrónico
 textFieldNombre=Introducir Nombre
 textFieldEmailRepit=Repetir Correo Electrónico
 textFieldPasswordRepit=Repetir contraseña
+textListaUsuario=Lista de Usuarios
 openAceptarButton=Aceptar
 openRegistrarButton=Registrar
+openListarUsuariosButton=Lista de Usuarios
 buttonRecuperarContrasenia=Recuperar Contraseña
 buttonVolverAtras=Volver Atrás
 textRegistroTitulo=¡Regístrate Ahora!
@@ -18,6 +20,7 @@ profileTitle=Pantalla de Perfil
 registroTitle=Pantalla Registro
 passwordTitle=Pantalla Recuperar Contraseña
 loginTitle=Pantalla Principal
+usuarioTitle=Pantalla Lista de Usuarios
 errorCredencialesVacios=¡Credenciales nulos o vacíos!
 errorUsuarioNoEncontrado=Usuario no encontrado
 errorContraseniaIncorrecta=Contraseña incorrecta
@@ -32,3 +35,8 @@ errorPasswordLongitud=¡La contraseña debe tener al menos 6 caracteres!
 errorEmailFormato=¡El formato del correo no es válido!
 errorUsuarioExiste=¡El usuario ya existe!
 errorEmailOPasswordNoCoincide=¡El correo electrónico o la contraseña no coinciden!
+idRow=ID
+usuarioRow=Usuario
+emailRow=Correo
+nombreRow=Nombre
+
