updating app-registro-fx

--- a/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
@@ -15,6 +15,7 @@ openRegistrarButton=Register
 openListarUsuariosButton=List of Users
 buttonRecuperarContrasenia=Recover Password  
 buttonVolverAtras=Go Back  
+buscarUsuariosButton=Search
 textRegistroTitulo=Sign Up Now!  
 profileTitle=Profile Screen  
 registroTitle=Register Screen  
