--- a/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
@@ -15,6 +15,7 @@ openRegistrarButton=Registrar
 openListarUsuariosButton=Lista de Usuarios
 buttonRecuperarContrasenia=Recuperar Contraseña
 buttonVolverAtras=Volver Atrás
+buscarUsuariosButton=Buscar
 textRegistroTitulo=¡Regístrate Ahora!
 profileTitle=Pantalla de Perfil
 registroTitle=Pantalla Registro
