--- a/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
@@ -15,6 +15,7 @@ openRegistrarButton=Inscrire
 openListarUsuariosButton=Liste des Utilisateurs  
 buttonRecuperarContrasenia=Récupérer Mot de passe  
 buttonVolverAtras=Retour  
+buscarUsuariosButton=rechercher
 textRegistroTitulo=Inscrivez-vous Maintenant !  
 profileTitle=Écran de Profil  
 registroTitle=Écran d'Inscription  
