--- a/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
@@ -20,6 +20,7 @@ textRegistroTitulo=¡Regístrate Ahora!
 profileTitle=Pantalla de Perfil
 registroTitle=Pantalla Registro
 passwordTitle=Pantalla Recuperar Contraseña
+juegoTitle=Pantalla del Juego
 loginTitle=Pantalla Principal
 usuarioTitle=Pantalla Lista de Usuarios
 errorCredencialesVacios=¡Credenciales nulos o vacíos!
@@ -36,8 +37,8 @@ errorPasswordLongitud=¡La contraseña debe tener al menos 6 caracteres!
 errorEmailFormato=¡El formato del correo no es válido!
 errorUsuarioExiste=¡El usuario ya existe!
 errorEmailOPasswordNoCoincide=¡El correo electrónico o la contraseña no coinciden!
+errorSelecioneUsuario=Seleccione un usuario
 idRow=ID
 usuarioRow=Usuario
 emailRow=Correo
 nombreRow=Nombre
-
