--- a/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
@@ -1,42 +1,44 @@
-textUsuario=Utilisateur  
-textUsuarioEmail=Utilisateur ou Courrier Électronique  
-textContrasenia=Mot de passe  
-textEmail=Courrier Électronique  
-textFieldUsuario=Entrer Utilisateur  
-textFieldUsuarioEmail=Entrer Utilisateur ou Courrier  
-textFieldPassword=Entrer Mot de passe  
-textFieldEmail=Entrer Courrier Électronique  
-textFieldNombre=Entrer Nom  
-textFieldEmailRepit=Répéter Courrier Électronique  
-textFieldPasswordRepit=Répéter Mot de passe  
-textListaUsuario=Liste des Utilisateurs  
-openAceptarButton=Accepter  
-openRegistrarButton=Inscrire  
-openListarUsuariosButton=Liste des Utilisateurs  
-buttonRecuperarContrasenia=Récupérer Mot de passe  
-buttonVolverAtras=Retour  
-buscarUsuariosButton=rechercher
-textRegistroTitulo=Inscrivez-vous Maintenant !  
-profileTitle=Écran de Profil  
-registroTitle=Écran d'Inscription  
-passwordTitle=Écran de Récupération de Mot de passe  
-loginTitle=Écran Principal  
-usuarioTitle=Écran Liste des Utilisateurs  
-errorCredencialesVacios=Identifiants nuls ou vides !  
-errorUsuarioNoEncontrado=Utilisateur non trouvé  
-errorContraseniaIncorrecta=Mot de passe incorrect  
-errorEmailVacioNulo=Le courriel ne peut pas être nul ou vide !  
-errorEnviarEmail=Impossible d'envoyer le courriel !  
-emailEnvioCorrecto=Le courriel a été envoyé avec succès  
-errorUsuarioVacio=L'utilisateur ne peut pas être nul ou vide !  
-errorPasswordVacio=Le mot de passe ne peut pas être nul ou vide !  
-errorNombreVacio=Le nom ne peut pas être nul ou vide !  
-errorEmailVacio=Le courriel ne peut pas être nul ou vide !  
-errorPasswordLongitud=Le mot de passe doit contenir au moins 6 caractères !  
-errorEmailFormato=Le format du courriel n'est pas valide !  
-errorUsuarioExiste=L'utilisateur existe déjà !  
-errorEmailOPasswordNoCoincide=Le courriel ou le mot de passe ne correspondent pas !  
+textUsuario=Utilisateur
+textUsuarioEmail=Utilisateur ou Email
+textContrasenia=Mot de passe
+textEmail=Email
+textFieldUsuario=Saisir l'utilisateur
+textFieldUsuarioEmail=Saisir l'utilisateur ou l'email
+textFieldPassword=Saisir le mot de passe
+textFieldEmail=Saisir l'email
+textFieldNombre=Saisir le nom
+textFieldEmailRepit=Répéter l'email
+textFieldPasswordRepit=Répéter le mot de passe
+textListaUsuario=Liste d'utilisateurs
+openAceptarButton=OK
+openRegistrarButton=Registre
+openListarUsuariosButton=Liste des utilisateurs
+buttonRecuperarContrasenia=Récupérer le mot de passe
+buttonVolverAtras=Retour
+buscarUsuariosButton=Rechercher
+textRegistroTitulo=Inscrivez-vous maintenant !
+profileTitle=Écran de profil
+registroTitle=Écran d'enregistrement
+passwordTitle=Écran de récupération de mot de passe
+juegoTitle=Écran du jeu
+loginTitle=Écran principal
+usuarioTitle=Écran de la liste des utilisateurs
+errorCredencialesVacios=Les identifiants ne peuvent pas être vides !
+errorUsuarioNoEncontrado=Utilisateur non trouvé
+errorContraseniaIncorrecta=Mot de passe incorrect
+errorEmailVacioNulo=L'email ne peut pas être vide !
+errorEnviarEmail=Échec de l'envoi de l'email !
+emailEnvioCorrecto=Email envoyé avec succès
+errorUsuarioVacio=Le nom d'utilisateur ne peut pas être vide !
+errorPasswordVacio=Le mot de passe ne peut pas être vide !
+errorNombreVacio=Le nom ne peut pas être vide !
+errorEmailVacio=L'email ne peut pas être vide !
+errorPasswordLongitud=Le mot de passe doit contenir au moins 6 caractères !
+errorEmailFormato=Format d'email invalide !
+errorUsuarioExiste=L'utilisateur existe déjà !
+errorEmailOPasswordNoCoincide=L'email ou le mot de passe ne correspondent pas !
+errorSelecioneUsuario=Veuillez sélectionner un utilisateur
 idRow=ID
 usuarioRow=Utilisateur
-emailRow=Courriel  
+emailRow=Email
 nombreRow=Nom
