--- a/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
@@ -1,41 +1,43 @@
-textUsuario=User  
-textUsuarioEmail=User or Email  
-textContrasenia=Password  
-textEmail=Email  
-textFieldUsuario=Enter Username  
-textFieldUsuarioEmail=Enter Username or Email  
-textFieldPassword=Enter Password  
-textFieldEmail=Enter Email  
-textFieldNombre=Enter Name  
-textFieldEmailRepit=Repeat Email  
-textFieldPasswordRepit=Repeat Password  
-textListaUsuario=List of Users
-openAceptarButton=Accept  
-openRegistrarButton=Register  
-openListarUsuariosButton=List of Users
-buttonRecuperarContrasenia=Recover Password  
-buttonVolverAtras=Go Back  
+textUsuario=User
+textUsuarioEmail=User or Email
+textContrasenia=Password
+textEmail=Email
+textFieldUsuario=Enter Username
+textFieldUsuarioEmail=Enter Username or Email
+textFieldPassword=Enter Password
+textFieldEmail=Enter Email
+textFieldNombre=Enter Name
+textFieldEmailRepit=Repeat Email
+textFieldPasswordRepit=Repeat Password
+textListaUsuario=User List
+openAceptarButton=OK
+openRegistrarButton=Register
+openListarUsuariosButton=User List
+buttonRecuperarContrasenia=Recover Password
+buttonVolverAtras=Back
 buscarUsuariosButton=Search
-textRegistroTitulo=Sign Up Now!  
-profileTitle=Profile Screen  
-registroTitle=Register Screen  
-passwordTitle=Recover Password Screen  
-loginTitle=Main Screen  
-usuarioTitle=User List Screen  
-errorCredencialesVacios=Empty or null credentials!  
-errorUsuarioNoEncontrado=User not found  
-errorContraseniaIncorrecta=Incorrect password  
-errorEmailVacioNulo=Email cannot be null or empty!  
-errorEnviarEmail=Unable to send the email!  
-emailEnvioCorrecto=Email sent successfully  
-errorUsuarioVacio=Username cannot be null or empty!  
-errorPasswordVacio=Password cannot be null or empty!  
-errorNombreVacio=Name cannot be null or empty!  
-errorEmailVacio=Email cannot be null or empty!  
-errorPasswordLongitud=Password must be at least 6 characters long!  
-errorEmailFormato=Invalid email format!  
-errorUsuarioExiste=User already exists!  
-errorEmailOPasswordNoCoincide=Email or password do not match!  
+textRegistroTitulo=Sign Up Now!
+profileTitle=Profile Screen
+registroTitle=Registration Screen
+passwordTitle=Password Recovery Screen
+juegoTitle=Game Screen
+loginTitle=Main Screen
+usuarioTitle=User List Screen
+errorCredencialesVacios=Credentials cannot be empty!
+errorUsuarioNoEncontrado=User not found
+errorContraseniaIncorrecta=Incorrect password
+errorEmailVacioNulo=Email cannot be empty!
+errorEnviarEmail=Failed to send email!
+emailEnvioCorrecto=Email sent successfully
+errorUsuarioVacio=Username cannot be empty!
+errorPasswordVacio=Password cannot be empty!
+errorNombreVacio=Name cannot be empty!
+errorEmailVacio=Email cannot be empty!
+errorPasswordLongitud=Password must be at least 6 characters!
+errorEmailFormato=Invalid email format!
+errorUsuarioExiste=User already exists!
+errorEmailOPasswordNoCoincide=Email or password do not match!
+errorSelecioneUsuario=Please select a user
 idRow=ID
 usuarioRow=User
 emailRow=Email
