--- a/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-es.properties
@@ -42,3 +42,29 @@ idRow=ID
 usuarioRow=Usuario
 emailRow=Correo
 nombreRow=Nombre
+usuarioStr=Usuario: 
+nivelStr=Nivel: 
+puntosStr=Puntos: 
+victoriasStr=Victorias: 
+derrotasStr=Derrotas: 
+intentosStr=Intentos: 
+textPalabra=Palabra: 
+letrasUsadasStr=Letras usadas: 
+errorNoIniciado=No hay juego iniciado
+introduceLetra=Introduce una letra válida
+errorPalabra=Palabra incorrecta
+errorLetraIntroducida=Ya has introducido esa letra
+bienHecho=¡Bien hecho!
+errorLetra=Letra incorrecta
+mensajeVictoria=¡Has ganado! +%d puntos
+mensajeDerrota=Has perdido. -%d puntos. Derrotas: %d
+mensajeSubirNivel=¡Subiste de nivel!
+mensajeNivelMaximo=Nivel máximo alcanzado
+mensajeBajarNivel=¡Bajaste de nivel por 3 derrotas!
+mensajeNivelMinimo=Has alcanzado el nivel mínimo.
+openJugarButton=Jugar
+openEditarButton=Editar
+tiendaButton=Tienda
+insertarButton=Insertar
+reiniciarButton=Reiniciar
+textFieldLetra=Letra/Palabra
