--- a/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-fr.properties
@@ -2,43 +2,69 @@ textUsuario=Utilisateur
 textUsuarioEmail=Utilisateur ou Email
 textContrasenia=Mot de passe
 textEmail=Email
-textFieldUsuario=Saisir l'utilisateur
-textFieldUsuarioEmail=Saisir l'utilisateur ou l'email
-textFieldPassword=Saisir le mot de passe
-textFieldEmail=Saisir l'email
-textFieldNombre=Saisir le nom
-textFieldEmailRepit=Répéter l'email
-textFieldPasswordRepit=Répéter le mot de passe
-textListaUsuario=Liste d'utilisateurs
-openAceptarButton=OK
-openRegistrarButton=Registre
+textFieldUsuario=Saisir un utilisateur
+textFieldUsuarioEmail=Saisir utilisateur ou email
+textFieldPassword=Saisir mot de passe
+textFieldEmail=Saisir email
+textFieldNombre=Saisir nom
+textFieldEmailRepit=Répéter email
+textFieldPasswordRepit=Répéter mot de passe
+textListaUsuario=Liste des utilisateurs
+openAceptarButton=Accepter
+openRegistrarButton=S'inscrire
 openListarUsuariosButton=Liste des utilisateurs
-buttonRecuperarContrasenia=Récupérer le mot de passe
+buttonRecuperarContrasenia=Récupérer mot de passe
 buttonVolverAtras=Retour
 buscarUsuariosButton=Rechercher
 textRegistroTitulo=Inscrivez-vous maintenant !
 profileTitle=Écran de profil
-registroTitle=Écran d'enregistrement
+registroTitle=Écran d'inscription
 passwordTitle=Écran de récupération de mot de passe
-juegoTitle=Écran du jeu
+juegoTitle=Écran de jeu
 loginTitle=Écran principal
-usuarioTitle=Écran de la liste des utilisateurs
-errorCredencialesVacios=Les identifiants ne peuvent pas être vides !
+usuarioTitle=Écran liste utilisateurs
+errorCredencialesVacios=Identifiants vides !
 errorUsuarioNoEncontrado=Utilisateur non trouvé
 errorContraseniaIncorrecta=Mot de passe incorrect
-errorEmailVacioNulo=L'email ne peut pas être vide !
-errorEnviarEmail=Échec de l'envoi de l'email !
+errorEmailVacioNulo=Email ne peut être vide !
+errorEnviarEmail=Échec d'envoi de l'email !
 emailEnvioCorrecto=Email envoyé avec succès
-errorUsuarioVacio=Le nom d'utilisateur ne peut pas être vide !
-errorPasswordVacio=Le mot de passe ne peut pas être vide !
-errorNombreVacio=Le nom ne peut pas être vide !
-errorEmailVacio=L'email ne peut pas être vide !
-errorPasswordLongitud=Le mot de passe doit contenir au moins 6 caractères !
+errorUsuarioVacio=Nom d'utilisateur vide !
+errorPasswordVacio=Mot de passe vide !
+errorNombreVacio=Nom vide !
+errorEmailVacio=Email vide !
+errorPasswordLongitud=Le mot de passe doit avoir 6 caractères minimum !
 errorEmailFormato=Format d'email invalide !
-errorUsuarioExiste=L'utilisateur existe déjà !
-errorEmailOPasswordNoCoincide=L'email ou le mot de passe ne correspondent pas !
-errorSelecioneUsuario=Veuillez sélectionner un utilisateur
+errorUsuarioExiste=Utilisateur existe déjà !
+errorEmailOPasswordNoCoincide=Email ou mot de passe incorrect !
+errorSelecioneUsuario=Sélectionnez un utilisateur
 idRow=ID
 usuarioRow=Utilisateur
 emailRow=Email
 nombreRow=Nom
+usuarioStr=Utilisateur : 
+nivelStr=Niveau : 
+puntosStr=Points : 
+victoriasStr=Victoires : 
+derrotasStr=Défaites : 
+intentosStr=Tentatives : 
+textPalabra=Mot : 
+letrasUsadasStr=Lettres utilisées : 
+errorNoIniciado=Jeu non démarré
+introduceLetra=Saisissez une lettre valide
+errorPalabra=Mot incorrect
+errorLetraIntroducida=Lettre déjà utilisée
+bienHecho=Bien joué !
+errorLetra=Lettre incorrecte
+mensajeVictoria=Vous avez gagné ! +%d points
+mensajeDerrota=Vous avez perdu. -%d points. Défaites : %d
+mensajeSubirNivel=Niveau supérieur !
+mensajeNivelMaximo=Niveau maximum atteint
+mensajeBajarNivel=Niveau inférieur après 3 défaites !
+mensajeNivelMinimo=Niveau minimum atteint
+openJugarButton=Jouer
+openEditarButton=Modifier
+tiendaButton=Boutique
+insertarButton=Insérer
+reiniciarButton=Redémarrer
+textFieldLetra=Lettre/Mot
