--- a/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
+++ b/homeworks/app-registro-fx/src/main/resources/idioma-en.properties
@@ -3,14 +3,14 @@ textUsuarioEmail=User or Email
 textContrasenia=Password
 textEmail=Email
 textFieldUsuario=Enter Username
-textFieldUsuarioEmail=Enter Username or Email
+textFieldUsuarioEmail=Enter User or Email
 textFieldPassword=Enter Password
 textFieldEmail=Enter Email
 textFieldNombre=Enter Name
 textFieldEmailRepit=Repeat Email
 textFieldPasswordRepit=Repeat Password
 textListaUsuario=User List
-openAceptarButton=OK
+openAceptarButton=Accept
 openRegistrarButton=Register
 openListarUsuariosButton=User List
 buttonRecuperarContrasenia=Recover Password
@@ -36,9 +36,35 @@ errorEmailVacio=Email cannot be empty!
 errorPasswordLongitud=Password must be at least 6 characters!
 errorEmailFormato=Invalid email format!
 errorUsuarioExiste=User already exists!
-errorEmailOPasswordNoCoincide=Email or password do not match!
-errorSelecioneUsuario=Please select a user
+errorEmailOPasswordNoCoincide=Email or password does not match!
+errorSelecioneUsuario=Select a user
 idRow=ID
 usuarioRow=User
 emailRow=Email
 nombreRow=Name
+usuarioStr=User: 
+nivelStr=Level: 
+puntosStr=Points: 
+victoriasStr=Victories: 
+derrotasStr=Defeats: 
+intentosStr=Attempts: 
+textPalabra=Word: 
+letrasUsadasStr=Used letters: 
+errorNoIniciado=No game started
+introduceLetra=Enter a valid letter
+errorPalabra=Incorrect word
+errorLetraIntroducida=Letter already used
+bienHecho=Well done!
+errorLetra=Incorrect letter
+mensajeVictoria=You won! +%d points
+mensajeDerrota=You lost. -%d points. Defeats: %d
+mensajeSubirNivel=Level up!
+mensajeNivelMaximo=Maximum level reached
+mensajeBajarNivel=Level down after 3 defeats!
+mensajeNivelMinimo=Minimum level reached
+openJugarButton=Play
+openEditarButton=Edit
+tiendaButton=Store
+insertarButton=Insert
+reiniciarButton=Restart
+textFieldLetra=Letter/Word
